# lisp-machine

./: .gitignore  Cargo.toml  Plan.md  README.md  crates.js  flake.nix  help.html  index.html  search-index.js  settings.html  src-files.js
.github/workflows/: ci.yml  docs.yml
examples/: factorial.scm  fibonacci.scm  mutual-tco.scm  tco.scm  write-to-file.scm
lispdm/: all.html  constant.PRELUDE.html  enum.Arity.html  enum.Expr.html  enum.LispDMError.html  enum.Port.html  enum.ProcedureKind.html  enum.ProcedureReturn.html  index.html  macro.exprs!.html  macro.exprs.html  sidebar-items.js  struct.Engine.html  struct.EnvRef.html  struct.InputPort.html  struct.List.html  struct.OutputPort.html  trait.FromExpr.html  type.Exprs.html  type.FromExprResult.html  type.ProcedureFn.html  type.ProcedureResult.html
lispdm/evaluator/env/: struct.EnvRef.html
lispdm/expr/expr/: enum.Expr.html  trait.FromExpr.html  type.Exprs.html  type.FromExprResult.html
lispdm/expr/list/: struct.List.html
lispdm/expr/port/: enum.Port.html  struct.InputPort.html  struct.OutputPort.html
lispdm/expr/procedure/: enum.Arity.html  enum.ProcedureKind.html  (+3 more)
src/: ast.rs  builtin.rs  environment.rs  interpreter.rs  lexer.rs  lib.rs  list.rs  main.rs  parser.rs  prelude.scm  utils.rs
src/evaluator/: env.rs  error.rs  eval.rs  mod.rs  procedure.rs  utils.rs
src/expr/: expr.rs  list.rs  mod.rs  port.rs  procedure.rs
src/lispdm/: lib.rs.html
src/parser/: lexer.rs  parser.rs
src/repl/: repl.rs
src/utils/: macros.rs  mod.rs
tests/: integration_tests.rs
type.impl/std/: primitive.fn.js
(+72 files in other folders)
