[package]
name = "lispdm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rustyline = {version = "13.0.0", features = ["derive"]}
uuid = {version = "1.6.1", features = ["v4", "fast-rng", "macro-diagnostics"]}

[features]
test_tailcall = []
